--- a/.gitignore
+++ b/.gitignore
@@ -4,18 +4,13 @@
 *.iml
 *.ipr
 
-
-
-
-
-
-
-
-HELP.md
+### target ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+HELP.md
 
 ### STS ###
 .apt_generated
