--- a/springboot-edu/pom.xml
+++ b/springboot-edu/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>springboot-edu</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -23,6 +24,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <!-- 单元测试 -->
         <dependency>
@@ -67,12 +72,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!-- thymeleaf关闭严格语法相关依赖 -->
-        <!--<dependency>
-            <groupId>net.sourceforge.nekohtml</groupId>
-            <artifactId>nekohtml</artifactId>
-            <version>1.9.22</version>
-        </dependency>-->
 
         <!-- SpringBoot提供的热部署工具 -->
         <dependency>
@@ -81,6 +80,17 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency><!-- 去除内嵌tomcat服务器 -->
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <scope>provided</scope>
+        </dependency><!-- 去除内嵌tomcat解析jsp -->
     </dependencies>
 
     <build>
@@ -88,7 +98,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!-- 使用热部署出现中文乱码的解决方案 -->
                 <configuration>
+                    <fork>true</fork>
+                    <!-- 增加jvm参数 -->
+                    <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
+                    <!-- 指定入口类 -->
+                    <mainClass>com.sforits.springbootedu.SpringbootEduApplication</mainClass>
+
                     <excludes>
                         <exclude>
                             <groupId>org.springframework.boot</groupId>
